Therion 6.0.4 (in progress):


--------------------------------------------------------------------------------

Therion 6.0.3 (2021-10-03):

therion:
 * add support for splay shots in .3d import
 * survex code updated to 1.2.45
 * a new patch to get reproducible .3d files applied
 * bugs fixed:
   - fixed typos in an error message
   - sample files modified not to start with #! characters which confused lintian
   - color map-fg depth: fix the colouring issues and the related metapost error

loch:
 * use help files in .htb format on all platforms
 * fixed cross-platform differences of generated .lox files

xtherion:
 * fixed bug with PocketTopo XVI rendering introduced in 6.0.2

infrastructure:
 * cmake: added compilation of .mo translation file
 * cmake: improved installation using components
 * cmake: reproducibility fixes
 * cmake: added support for generation of the documentation in HTML format

--------------------------------------------------------------------------------

Therion 6.0.2 (2021-09-13):

therion:
 * add compatibility macros for pre-6.0.0 transparency style in MetaPost
 * allow scaling of some point symbols (anchor, bridge, camp, dig, fixedladder,
   noequipment, rope, ropeladder, steps, traverse, viaferrata) [PR#382,384]
 * include Proj 8.1.1 to the Proj testing suite
 * bugs fixed:
   - wrong vertical alignment of legend entries using <br> to split lines
   - \baselineskip not applied to \the\cavename in the map legend
   - fixed the collision of \the\cavename with the north arrow

loch:
 * fix a missing include when compiling with vtk 9.0.1 and gcc 11
   [Debian #984363]

xtherion:
 * improved control over vertical positioning of backgroud images

infrastructure:
 * fix possible mixing of make and cmake generated files [PR#381]
 * fix static linking issues under recent MinGW

--------------------------------------------------------------------------------

Therion 6.0.1 (2021-07-25):

therion: