@@ -1,5 +1,8 @@
 Therion 6.0.4 (in progress):
 
+therion:
+ * bugs fixed:
+   - fixed bug with counter and depth instrument calibration
 
 --------------------------------------------------------------------------------
 
